--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 Flask==2.2.5
 Flask-SQLAlchemy==2.5.1
 numpy==1.23.5
-keras==2.13.1
+#keras==2.13.1
 sqlalchemy==1.4.20
 psycopg2-binary==2.9.1
 pytest==7.4.2
